# threat-landscape

./: .env.example  .gitignore  CLAUDE.md  Eval.txt  README.md  index.html  instructions.txt  latest.json  main.py  pc_instructions.txt  pyproject.toml  requirements.txt  setup_pc.py  setup_rpi.sh  source_debug.html
.claude/: settings.local.json
aiml/: index.html  latest.json
conferences/: index.html  latest.json
config/: config.yaml  sources.yaml
data/: conferences.yaml
sample_data/: sample_items.json
src/: aiml_main.py  conferences_main.py  main.py
static/: app.js  style.css
stix/: 007e55c6-ac5e-4f75-9e69-f06887b6b167.json  0089c6ff-a42f-4020-8be5-4fce2c0acdeb.json  00b701f4-60d1-4259-8e19-a6bd8eb4f01e.json  00fe1a64-dab5-4715-bb38-47a3ddd11311.json  0124471f-cc73-4783-bab5-3f8f16f9ab33.json  013851bd-10b2-4c46-8930-e5b4befadd84.json  014c0f39-bbd5-4848-8c97-1536ae42a30f.json  01543aa5-9b42-4eaf-8f50-982d14a8302f.json  01993887-55de-4adf-8c0a-781addde968a.json  01ed1d25-b98f-4842-8330-ec343e71c16b.json  0222b745-3ed1-4e8a-af2e-9a5c286b8e2d.json  02422fc2-18b0-40a1-ad3f-f43b468ab332.json  0243f0a5-7ee3-42cf-9d79-86859fe888fc.json  02851f91-b7d5-4e33-9f0e-eb1ed4966d93.json  02b15351-5b9d-4301-97f5-a4bdc517ca62.json  02d23641-9002-4c18-84b9-6e0941063b9b.json  031ab19e-23e1-420c-be5f-6b88d2e54ca7.json  03665c37-8aba-4a1b-b1b3-3a909159aade.json  03e53ee5-e5ae-484d-ab10-77218878bcbe.json  03e5b833-c001-4648-ac3e-0db9cf221f60.json  03f688c3-866c-47e1-a901-d26cabcf4512.json  0438da88-ec4e-4e44-9c3c-529c578db840.json  04635201-a7f0-4f52-a52d-143a1d144d64.json  (+1038 more)
(+39 files in other folders)
